# humblebundle-downloader

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
humble_dl/: downloader.py
humblebundle_downloader/: api.py  auth.py  cache.py  downloader.py  models.py
tests/: test_api.py  test_auth.py  test_cache.py  test_downloader.py
