[project]
name = "humblebundle-downloader"
version = "0.5.0"
description = "Download your Humble Bundle library"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eddy Hintze", email = "eddy@gitx.codes"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "aiofiles>=24.1",
    "parsel>=1.9",
    "typer>=0.12",
    "rich>=13.7",
    "rookiepy>=0.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
    "pytest-cov>=5.0",
]

[project.scripts]
hbd = "humblebundle_downloader.cli:app"

[project.urls]
Homepage = "https://github.com/timsleeper/humblebundle-downloader"
Repository = "https://github.com/timsleeper/humblebundle-downloader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
